//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "InAppPurchase.proto";
import "Item.proto";
import "MonsterStuff.proto";
import "Reward.proto";
import "Sales.proto";
import "SharedEnumConfig.proto";
import "Structure.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventInAppPurchaseProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message InAppPurchaseRequestProto {
	optional MinimumUserProto sender = 1;
	optional string receipt = 2;
	optional string localcents = 3;
	optional string localcurrency = 4;
	optional string locale = 5;
	optional string ipaddr = 6;
	optional string uuid = 7; //uuid for sales packages
}

																						//DONE
message InAppPurchaseResponseProto {
	optional MinimumUserProto sender = 1;
	optional ResponseStatus status = 2;
	//should be renamed gemsGained
	optional int32 diamondsGained = 3;
	optional int32 coinsGained = 4 [deprecated = true];
	optional string packageName = 5;
	optional double packagePrice = 6;
	optional string receipt = 7;
	
	//if user received, say, two pieces of a monster
	//and he needs one to complete an existing monster
	//there would be one monster that would be completed
	//and another that would be the remaining pieces of the monster
	repeated FullUserMonsterProto updatedOrNew = 8;
	
	repeated UserItemProto updatedUserItems = 9;
	
	repeated FullUserStructureProto updatedMoneyTree = 10;
	
	optional SalesPackageProto successorSalesPackage = 11;
	optional SalesPackageProto purchasedSalesPackage = 12;
	optional UserRewardProto rewards = 13;
		
}

//------------------------------------------------------------------------------------------

message EarnFreeDiamondsRequestProto {
	optional MinimumUserProto sender = 1;
	optional EarnFreeDiamondsType freeDiamondsType = 2 [default = FB_CONNECT];
	optional int64 clientTime = 3;
		
}

message EarnFreeDiamondsResponseProto {
	optional MinimumUserProto sender = 1;
	optional ResponseStatus status = 2;
	optional EarnFreeDiamondsType freeDiamondsType = 3 [default = FB_CONNECT];

}

//------------------------------------------------------------------------------------------

message ExchangeGemsForResourcesRequestProto {
	optional MinimumUserProtoWithMaxResources sender = 1;
	
	//positive number representing how many gems to be taken away
	optional int32 numGems = 2;
	optional int32 numResources = 3;
	optional ResourceType resourceType = 4 [default = CASH]; 
	
	//just for currency tracking purposes
	optional int64 clientTime = 5;
}

message ExchangeGemsForResourcesResponseProto {
	optional MinimumUserProtoWithMaxResources sender = 1;
	optional ResponseStatus status = 2;
	

}

//------------------------------------------------------------------------------------------


